2000-06-07  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Builtins): More on `test' and
	`case'.
	Some on `if' and `break'.

2000-06-07  Morten Eriksen  <mortene@sim.no>

	* acspecific.m4 (_AC_PATH_X_DIRECT): Include `X11/Intrinsic.h'
	when trying to use `XtMalloc' to actually have a chance of
	succeeding.

2000-06-07  Akim Demaille  <akim@epita.fr>

	Hard (code) X.

	* acspecific.m4 (_AC_PATH_X_DIRECT): Hard code `X11/Intrinsic.h'
	instead of using `ac_x_direct_test_include', likewise for `Xt' and
	`ac_x_direct_test_lib', `XtMalloc' and
	`ac_x_direct_test_function'.

2000-06-07  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_PATH_X): Use AC_DIVERT.
	Use `no', not `NO' for ac_x_includes and ac_x_libraries.
	Adjust dependencies.
	(_AC_PATH_X_DIRECT): Introduce ac_x_header_dirs to factor the list
	of places where headers and libs might be.
	(AC_PATH_XTRA): Don't quote the argument of `case'.

2000-06-07  Jim Meyering  <meyering@lucent.com>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Put the expansion of
	AC_LIST_LINKS in an unquoted `here'-document.

2000-06-06  Akim Demaille  <akim@epita.fr>

	* tests/aclocal.m4 (AC_ENV_SAVE): Skip `no_x'.
	From Mark Elbrecht.

2000-06-05  Mo DeJong  <mdejong@cygnus.com>

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Move the setting
	of ac_tool_prefix before the call to AC_DIVERT_POP.

2000-06-05  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CHECK_TOOL_PREFIX): AU define it.
	Suggested by Mo DeJong.

2000-06-05  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_C_CHAR_UNSIGNED): Use the new compiler-test
	technology so that we can do the test via compilations only.  Also
	use (char) -1 instead of (char) 255 to check if char is unsigned.

2000-05-28  Jim Meyering  <meyering@lucent.com>

	* acspecific.m4 (AC_FUNC_STRERROR_R): Call strerror_r with 2nd arg
	of type char*, not int.  Suggestion from Paul Eggert.

	* doc/autoconf.texi (Particular Functions): Give better description of